# nullspace

./: AGENTS.md  Cargo.toml  NEW-PLAN.md  README.md
binaries/nullspace-directory/src/: db.rs  main.rs  mirror.rs  pow.rs  server.rs  state.rs
binaries/nullspace-egui/: Cargo.toml
binaries/nullspace-egui/src/: events.rs  fonts.rs  main.rs  notify.rs  promises.rs  rpc.rs  tray.rs
binaries/nullspace-egui/src/screens/: add_contact.rs  add_device.rs  add_group.rs  group_info.rs  group_roster.rs  group_window.rs  image_viewer.rs  login.rs  mod.rs  new_chat.rs  new_group.rs  preferences.rs  profile.rs  settings.rs  steady_state.rs  user_info.rs
binaries/nullspace-egui/src/screens/settings/: add_device.rs  debug.rs  form.rs  preferences.rs  profile.rs
binaries/nullspace-egui/src/utils/: color.rs  folders.rs  generational.rs  hooks.rs  markdown.rs  mod.rs  prefs.rs  profile_cache.rs  profile_loader.rs  size.rs  speed.rs
binaries/nullspace-egui/src/widgets/: avatar.rs  content.rs  convo.rs  convo_row.rs  convo_select.rs  group_roster.rs  image_viewer.rs  mod.rs  profile.rs  smooth.rs  tabbed_pane.rs  user_info.rs  user_search.rs
binaries/nullspace-egui/src/widgets/convo/: cluster.rs  convo_state.rs  image_clip.rs
binaries/nullspace-egui/src/widgets/lib/: mod.rs  smooth.rs
binaries/nullspace-egui/src/widgets/pretty/: mod.rs  toggle.rs
binaries/nullspace-multitool/src/: shared.rs
binaries/nullspace-server/: Cargo.toml
binaries/nullspace-server/migrations/: 0001_init.sql  0003_mailboxes.sql  0005_fragments.sql  0007_group_registry.sql
binaries/nullspace-server/src/: channel.rs  config.rs  database.rs  device.rs  dir_client.rs  fragment.rs  group.rs  mailbox.rs  main.rs  multicast.rs  profile.rs  rpc.rs  rpc_pool.rs
binaries/xirtam-directory/: Cargo.toml
binaries/xirtam-directory/src/: config.rs  db.rs  main.rs  mirror.rs  server.rs  state.rs
binaries/xirtam-egui/: Cargo.toml
binaries/xirtam-egui/src/: component.rs  events.rs  main.rs  promises.rs
binaries/xirtam-egui/src/screens/: login.rs  steady_state.rs
binaries/xirtam-egui/src/utils/: color.rs  markdown.rs
binaries/xirtam-egui/src/widgets/: add_contact.rs  add_device.rs  add_group.rs  convo.rs  group_roster.rs  mod.rs  preferences.rs
binaries/xirtam-egui/src/widgets/convo/: chat_record.rs  direct.rs  group.rs
binaries/xirtam-gateway/: Cargo.toml
binaries/xirtam-gateway/migrations/: 0001_init.sql  0002_device_tokens.sql  0004_device_temp_pks.sql
binaries/xirtam-gateway/src/: config.rs  database.rs  device.rs  dir_client.rs  mailbox.rs  main.rs  rpc.rs
binaries/xirtam-multitool/: Cargo.toml
binaries/xirtam-multitool/src/: main.rs  shared.rs
binaries/xirtam-multitool/src/commands/: device.rs  dir.rs  keygen.rs  mod.rs
binaries/xirtam-server/: Cargo.toml
binaries/xirtam-server/migrations/: 0001_init.sql
binaries/xirtam-server/src/: config.rs  device.rs  dir_client.rs  mailbox.rs  main.rs  rpc.rs
demo/: .gitignore  gateway.toml  mailbox-recv  mailbox-send  register-demo-handle-device  register-demo-username-device  run-server  server.toml
demo/state/: device-chain.bcs  device-secret.bcs  directory-secret.key  gateway-signing.key  handle-owner.json
docs/: README.md  SUMMARY.md  _sidebar.md  architecture.md  devices.md  e2ee.md  events.md  groups.md  index.html  network.md
docs/guides/: gui-quick-start.md
docs/protocol/: README.md  attachments.md  devices.md  directory.md  e2ee.md  events.md  groups.md  network.md  provisioning.md  server.md
docs/rpc/: README.md  basic-concepts.md  directory.md  server.md
libraries/nanorpc-reqwest/: Cargo.toml
libraries/nullspace-client/: Cargo.toml  README.md  build.rs
libraries/nullspace-client/migrations/: 0001_schema.sql  0002_group_rosters.sql  0003_attachment_dl.sql  0003_attachment_paths.sql  0003_group_current_state.sql  0004_user_cache.sql  0005_message_reads.sql  0006_attachment_roots_no_sender.sql
libraries/nullspace-client/src/: api.rs  attachments.rs  auth_tokens.rs  bootstrap.rs  c_api.rs  config.rs  convo.rs  database.rs  events.rs  groups.rs  identity.rs  internal.rs  lib.rs  long_poll.rs  (+9 more)
libraries/nullspace-crypt/: Cargo.toml
libraries/nullspace-dirclient/: README.md
libraries/nullspace-nanorpc/: Cargo.toml
libraries/nullspace-rpc-pool/: Cargo.toml
libraries/nullspace-rpc-pool/src/: lib.rs
libraries/nullspace-structs/: Cargo.toml
libraries/xirtam-client/: Cargo.toml  README.md
libraries/xirtam-crypt/: Cargo.toml  README.md
libraries/xirtam-dirclient/: Cargo.toml
libraries/xirtam-nanorpc/: Cargo.toml
libraries/xirtam-structs/: Cargo.toml
libraries/xirtam-structs/benches/: envelope.rs  header_encryption.rs
libraries/xirtam-structs/src/: certificate.rs  directory.rs  e2ee.rs  envelope.rs  gateway.rs  group.rs  handle.rs  lib.rs  msg_content.rs  server.rs  timestamp.rs  username.rs
(+116 files in other folders)
