[package]
name = "nullspace-egui"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
eframe = { version = "0.34.1", features = ["persistence", "wgpu"] }
clap = { version = "4.5.40", features = ["derive"] }
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
] }
dirs = "6.0.0"
smol = "2"
url = "2.5.8"
nullspace-client = { version = "0.0.1", path = "../../libraries/nullspace-client" }
nullspace-crypt = { version = "0.0.1", path = "../../libraries/nullspace-crypt" }
nullspace-structs = { version = "0.0.1", path = "../../libraries/nullspace-structs" }
egui_hooks = { git = "https://github.com/nullchinchilla/egui_hooks", rev = "7cbd21a69d60ea6683ce057392b739b2471c6c93", features = [
    "persistence",
] }
smol_str = "0.3.2"
notify-rust = { version = "4.11.0", features = ["d"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
egui = "0.34.1"
# egui_extras = { version = "0.34.1", features = ["all_loaders"] }
anyhow = "1.0.100"
egui_taffy = "0.11"
taffy = "0.7.7"
pollster = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rodio = { version = "0.21.0", default-features = false, features = [
    "mp3",
    "playback",
] }
egui-file-dialog = "0.13.0"
open = "5.3.2"
infer = "0.19.0"
dashmap = "6.1.0"
defmac = "0.2.1"
image = "0.25.9"
fast_image_resize = { version = "6.0.0", features = ["rayon"] }
font-kit = "0.14.3"
moka = { version = "0.12.12", features = ["sync"] }
arboard = { version = "3.6.1", features = [
    "image-data",
    "wayland-data-control",
] }
fast-thumbhash = "0.2.0"
futures-util = "0.3.32"
egui_infinite_scroll = "0.10.0"
generational-box = "0.7.3"
uuid = { version = "1", features = ["serde"] }
fs2 = "0.4.3"
derive_setters = "0.1.9"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3.3", default-features = false, features = [
    "async-io",
    "blocking",
] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.21.1"
