[package]
name = "xirtam-egui"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
eframe = "0.33.3"
base64 = "0.22.1"
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
url = "2.5.8"
xirtam-client = { version = "0.0.1", path = "../../libraries/xirtam-client" }
xirtam-crypt = { version = "0.0.1", path = "../../libraries/xirtam-crypt" }
xirtam-structs = { version = "0.0.1", path = "../../libraries/xirtam-structs" }
egui_hooks = { version = "0.10.0", features = ["persistence"] }
poll-promise = { version = "0.3.0", features = ["tokio"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
egui = "0.33.3"
anyhow = "1.0.100"
