[package]
name = "xirtam-multitool"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
bcs = "0.1.6"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
url = "2.5.7"
xirtam-crypt = { path = "../../libraries/xirtam-crypt" }
xirtam-dirclient = { path = "../../libraries/xirtam-dirclient" }
xirtam-nanorpc = { path = "../../libraries/xirtam-nanorpc" }
xirtam-structs = { path = "../../libraries/xirtam-structs" }
